<resources>
    <string name="app_name">FinTrack</string>
    <string name="menu_button_description">Open menu</string>
    <string name="record_button_description">Record</string>
    <string name="monthly_spending">Monthly Spending</string>
    <string name="monthly_spending_amount">RM 0</string>
    <string name="rm_0">RM 0</string>
    <string name="monthly_income">Monthly\nIncome</string>
    <string name="monthly_income_amount">RM 0</string>
    <string name="budget">Budget\nRemaining</string>
    <string name="view_chart">Analyze Chart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>