<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_b3f0ff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/main_iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:src="@mipmap/search"
            />

    </RelativeLayout>
        <ListView
            android:id="@+id/main_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main_top_layout"
            android:padding="10dp"
            android:divider="@null"
            android:dividerHeight="6dp"
            android:scrollbars="vertical"
            android:background="@color/grey_f3f3f3">

        </ListView>

         <ImageButton
             android:id="@+id/main_btn_more"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@mipmap/menu2"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="20dp"
             android:scaleType="fitCenter"
             android:contentDescription="@string/menu_button_description"
             android:background="@drawable/main_menubtn_bg"/>

    <ImageButton
        android:id="@+id/main_btn_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/main_btn_more"
        android:layout_toLeftOf="@+id/main_btn_more"
        android:src="@mipmap/record"
        android:checkable="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/record_button_description"
        android:background="@null"/>

</RelativeLayout>